--- a/docs/faststore/docs/api-extensions/api-extensions-use-cases/adding-a-contact-form-to-a-landing-page.mdx
+++ b/docs/faststore/docs/api-extensions/api-extensions-use-cases/adding-a-contact-form-to-a-landing-page.mdx
@@ -39,10 +39,6 @@ Next, define the GraphQL types for your contact form.
 2. In the `graphql/thirdParty/resolvers` folder, create a `contactForm.ts` file to handle the resolver logic for your contact form.
 3. In the `graphql/thirdParty/typeDefs` folder, create a `contactForm.graphql` file and add the following schema definitions.
 
-   - `ContactFormResponse`: Defines the structure of the response from the API, with a mandatory message field.
-   - `ContactFormInput`: Specifies the input fields required for the contact form.
-   - `Mutation`: Declares a mutation for submitting the contact form data.
-
   <CH.Code rows={7} show={["contactForm.graphql"]}>
 
   ```graphql contactForm.graphql
@@ -64,16 +60,17 @@ Next, define the GraphQL types for your contact form.
 
   </CH.Code>
 
+     - `ContactFormResponse`: Defines the structure of the response from the API, with a mandatory message field.
+      - `ContactFormInput`: Specifies the input fields required for the contact form.
+      - `Mutation`: Declares a mutation for submitting the contact form data.
+
 ---
 
 ### Create the resolvers
 
 Now, let's create the resolver function to process the form submission.
 
-In the `contactForm.ts` file, add the following code.
-
-- `SubmitContactFormData`: Defines the structure of the expected input data.
-- `contactFormResolver`: Implements the `submitContactForm` mutation, sending the form data to the specified API endpoint and handling the response.
+In the `contactForm.ts` file, add the following code. This file imports the `contactFormResolver` and combines it with other potential resolvers into a single object.
 
 <CH.Code rows={7} show={["contactForm.ts"]}>
 
@@ -141,8 +138,6 @@ export default resolvers;
 
 </CH.Code>
 
-This file imports the `contactFormResolver` and combines it with other potential resolvers into a single object.
-
 ---
 
 ### Creating the new section
@@ -157,9 +152,6 @@ Create a new section to receive the Contact Form data.
    - `contant-form.module.scss`: The stylesheet for the component.
 
 3. Add the following code to the `ContactForm.tsx`.
-
-   - This component renders a contact form with name, email, subject, and message fields.
-   - The `onSubmit` function handles form submission, sends the data to the server, and clears the form fields upon success.
 
   <CH.Code rows={7} show={["ContactForm.tsx"]}>
 
@@ -267,6 +259,9 @@ Create a new section to receive the Contact Form data.
   ```
 
   </CH.Code>
+
+     - This component renders a contact form with name, email, subject, and message fields.
+      - The `onSubmit` function handles form submission, sends the data to the server, and clears the form fields upon success.
 
 ---
 
