add two </CH.Scrollycoding>
I decided to use two </CH.Scrollycoding> tags. Since there are more than three code blocks, it wasn't easy to identify and copy the code starting from the sections involving the creation of the new section: The file name was overlapping the copy and expanding the code button.

--- a/docs/faststore/docs/api-extensions/api-extensions-use-cases/adding-installment-information-in-the-product-details-page.mdx
+++ b/docs/faststore/docs/api-extensions/api-extensions-use-cases/adding-installment-information-in-the-product-details-page.mdx
@@ -222,6 +222,10 @@ For a more user-friendly display, you can format the installment values to inclu
   > ℹ️ For further details on code implementation, see the [`utils`](https://github.com/vtex-sites/playground.store/tree/main/src/utils) folder available in the playground.store repository.
 ---
 
+</CH.Scrollycoding>
+
+<CH.Scrollycoding rows={7}>
+
 ### Create the new component with installments
 
 Now that we've established the logic for retrieving installment data, let's create a new component to display this information alongside the buy button on the PDP.
