--- a/docs/faststore/docs/api-extensions/api-extensions-use-cases/adding-a-contact-form-to-a-landing-page.mdx
+++ b/docs/faststore/docs/api-extensions/api-extensions-use-cases/adding-a-contact-form-to-a-landing-page.mdx
@@ -139,6 +139,10 @@ export default resolvers;
 
 ---
 
+</CH.Scrollycoding>
+
+<CH.Scrollycoding rows={7}>
+
 ### Creating the new section
 
 Create a new section to receive the Contact Form data.
