fix "Define types" intro. section

--- a/docs/faststore/docs/api-extensions/api-extensions-use-cases/adding-a-contact-form-to-a-landing-page.mdx
+++ b/docs/faststore/docs/api-extensions/api-extensions-use-cases/adding-a-contact-form-to-a-landing-page.mdx
@@ -32,9 +32,7 @@ First, you need to set up the necessary GraphQL files to handle data submissions
 
 ### Define the types
 
-Next, define the GraphQL types for your contact form.
-
-1. Create a `contactForm.graphql` file in the `thirdParty` folder. This file will contain type definitions for your GraphQL schema.
+Next, define the GraphQL types for your contact form in a file called `contactForm.graphql` inside the `thirdParty` folder. This file will contain type definitions for your GraphQL schema.
 2. In the `graphql/thirdParty/resolvers` folder, create a `contactForm.ts` file to handle the resolver logic for your contact form.
 3. In the `graphql/thirdParty/typeDefs` folder, create a `contactForm.graphql` file and add the following schema definitions.
 
