Apply suggestions from code review
Co-authored-by: Bárbara Celi <112641072+barbara-celi@users.noreply.github.com>

--- a/docs/faststore/docs/api-extensions/api-extensions-use-cases/adding-a-contact-form-to-a-landing-page.mdx
+++ b/docs/faststore/docs/api-extensions/api-extensions-use-cases/adding-a-contact-form-to-a-landing-page.mdx
@@ -11,13 +11,13 @@ This guide illustrates how to handle data from a Contact Us form and send it to 
 - You want to add a form so shoppers can send their requests or feedback.
 - To handle the data submissions from this contact form, you need to [extend FastStore API with third-party API schemas](https://developers.vtex.com/docs/guides/faststore/api-extensions-extending-api-schema#extending-faststore-api-with-third-party-api-schemas) to handle the form data submission.
 
-## implementation
+## Implementation
 
 ### Create the GraphQL files
 
 First, you need to set up the necessary GraphQL files to handle data submissions.
 
-1. In your store repository, go to the `src` folder, if you don’t have one already, create a new `graphql` folder.
+1. In your store repository, go to the `src` folder, if you do not have one already, create a new `graphql` folder.
 2. Inside `graphql`, create the `thirdParty` folder.
 3. In the `thirdParty` folder, create two other subfolders:
 
