fix link and typos

--- a/docs/faststore/docs/customization/building-sections/overrides/section-styles.mdx
+++ b/docs/faststore/docs/customization/building-sections/overrides/section-styles.mdx
@@ -6,10 +6,9 @@ To customize the styles of a native section, you can use the `className` propert
 
 ## Before you begin
 
-Before delving into this guide, make sure you have already overridden a component, as presented in the [getOverriddenSection function] guide.
+Before delving into this guide, make sure you have already overridden a component, as presented in the [getOverriddenSection function](https://developers.vtex.com/docs/guides/faststore/overrides-getoverriddensection-function) guide.
 
-## Step by step
-
+## Instructions
 
 Let’s use the example provided in the [getOverriddenSection function](https://developers.vtex.com/docs/guides/faststore/overrides-getoverriddensection-function) guide, where the `Simple Alert` styles are being overridden via the `className`:
 
@@ -29,7 +28,7 @@ Let’s use the example provided in the [getOverriddenSection function](https://
     ```
 
 1. Create the `simple-alert.module.scss` file within the `sections` folder. 
-2. In the `simple-alert.module.scss` file, declare the class that you have added to the Simple Alert component. In this case, `.simpleAlert`.
+2. In the `simple-alert.module.scss` file, declare the class you have added to the Simple Alert component. In this case, `.simpleAlert`.
 3. Add the `scss` styles you desire to override:
 
     ```css
